--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ MANIFEST
 .pytest_cache/
 
 # Sphinx documentation
-docs/_build/
+docs/build/
+docs/source/_build
 
 # Jupyter Notebook
 .ipynb_checkpoints
