--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dist-name="projectxyxyxy"
 
 [tool.flit.metadata.requires-extra]
 test = ["pytest", "pytest-cov", "tox"]
+doc = ["sphinx", "sphinx_rtd_theme"]
 
 [tool.flit.metadata.urls]
 Documentation = "https://xyxyxy.readthedocs.io/en/latest/"
