Much better tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,75 @@
 [tox]
 envlist = py37
-isolated_build = True
+          docs
+          notebooks
+          flake8
+          black
 
+; This section defines the defaults
 [testenv]
-deps =
-    pytest
-    pytest-cov
-
+description = run the unit tests with pytest under {basepython}
+extras = test
+; The tests from the repo root are run against the installed package.
+; {toxinidir}: the directory where tox.ini is located
+; changedir: change to this working directory when executing the test command.
+; {envsitepackagesdir}: directory where packages are installed.
+; Note that architecture-specific files may appear in a different directory.
 changedir = {toxinidir}/tests
 commands = python -m pytest --cov={envsitepackagesdir}/project
+
+[testenv:docs]
+description = invoke sphinx-build to build the HTML docs, check that URIs are valid
+; There is no need to test the docs build with several python versions.
+basepython = python3.7
+extras = docs
+changedir = {toxinidir}
+; -W: turn warnings into errors
+; -d: Select a different cache directory (the doctrees can be shared between all builders).
+; {toxworkdir}: the directory where virtual environments are created
+; and sub directories for packaging reside.
+; -blinkcheck: check that URIs are valid
+; -b html: select a html builder
+commands =
+    sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "{toxworkdir}/docs_out" -W -b html
+    sphinx-build -d "{toxworkdir}/docs_doctree" docs/source "{toxworkdir}/docs_out" -W -blinkcheck
+
+[testenv:notebooks]
+description = test the example notebooks with pytest --nbval
+extras = test_notebooks
+changedir = {toxinidir}
+commands =
+    python -m pytest --nbval notebooks
+
+; As in setup.py
+[quality]
+linters = flake8>=3.7.8
+formatter = black>=19.3b0
+
+[testenv:flake8]
+description = Run flake8
+skip_install = True
+; If skip_install is True: extras are not installed
+; extras = linters
+deps = {[quality]linters}
+; There is no need to linter with several python versions.
+basepython = python3.7
+changedir = {toxinidir}
+commands =
+    flake8 setup.py project tests
+
+; At the project level, the tox.ini, setup.cfg, .pep8 or .flake8 files are read if present.
+; Only the first file is considered. If this file does not have a [flake8] section, no
+; project specific configuration is loaded.
+[flake8]
+ignore = E203, E266, E501, W503
+max-line-length = 88
+max-complexity = 18
+select = B, C, E, F, W, T4, B9
+
+[testenv:black]
+description = Run black
+skip_install = True
+deps = {[quality]formatter}
+basepython = python3.7
+changedir = {toxinidir}
+commands = black --check setup.py project tests
