--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "python.linting.flake8Args": [
-        "--ignore=E203,E266,E501W503",
+        "--ignore=E203,E266,E501,W503",
         "--max-line-length=88",
         "--max-complexity=18",
         "--select=B,C,E,F,W,T4,B9"
@@ -23,6 +23,7 @@
         "**/*.pyc": {
             "when": "$(basename).py"
         },
+        "**/**.egg-info": true,
         "**/.vscode": true,
         "**/.pytest_cache": true,
         "**/.coverage": true,
