--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
-envlist = py37
-          docs
-          notebooks
-          flake8
-          black
+envlist =
+    py36
+    py37
+    docs
+    notebooks
+    flake8
+    black
 
 ; This section defines the defaults
 [testenv]
@@ -14,10 +16,12 @@ extras = test
 ; changedir: change to this working directory when executing the test command.
 ; {envsitepackagesdir}: directory where packages are installed.
 ; Note that architecture-specific files may appear in a different directory.
+; -s: display print() in the tests
 changedir = {toxinidir}/tests
 commands = python -m pytest --cov={envsitepackagesdir}/project
 
 [testenv:docs]
+; TODO: Does it require an install?
 description = invoke sphinx-build to build the HTML docs, check that URIs are valid
 ; There is no need to test the docs build with several python versions.
 basepython = python3.7
@@ -46,7 +50,7 @@ linters = flake8>=3.7.8
 formatter = black>=19.3b0
 
 [testenv:flake8]
-description = Run flake8
+description = run flake8
 skip_install = True
 ; If skip_install is True: extras are not installed
 ; extras = linters
@@ -67,7 +71,7 @@ max-complexity = 18
 select = B, C, E, F, W, T4, B9
 
 [testenv:black]
-description = Run black
+description = run black
 skip_install = True
 deps = {[quality]formatter}
 basepython = python3.7
