--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,10 @@
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.pythonPath": "C:\\Users\\maxim\\Anaconda3\\envs\\project\\python.exe",
-    "python.testing.pyTestArgs": [
-        "tests"
+    "python.testing.pytestArgs": [
+        "tests",
     ],
-    "python.testing.pyTestEnabled": true,
+    "python.testing.pytestEnabled": true,
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "python.linting.flake8Args": [
